--- a/sachi/mathapp/templates/mathapp/math.html
+++ b/sachi/mathapp/templates/mathapp/math.html
@@ -6,7 +6,7 @@
             font-family: "Segoe UI", sans-serif;
             margin: 0;
             padding: 0;
-            color: #222;
+            color: black;
         }
 
         .container {
@@ -68,7 +68,7 @@
 <body>
     <div class="container">
         <h1>BMI CALCULATOR</h1>
-        <h3>Sachin J M(250007184)</h3>
+        <h2>Sachin J M(25007184)</h2>
 
         <form method="post">
             {% csrf_token %}
